objects/Collateral__c.object
<CustomObject>
    <customHelpPage>Collateral_Management</customHelpPage>
    <fields>
        <fullName>ACMFacility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ACMFacility</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ACMFacility__c.Relationship__c</field>
                <operation>equals</operation>
                <valueField>$Source.Facility_Client__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACMFacility__c</referenceTo>
        <relationshipLabel>Collateral</relationshipLabel>
        <relationshipName>Collateral</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Collateral</relationshipLabel>
        <relationshipName>Collateral</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acm_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Acm External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acm_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Acm_Facility__c.Relationship__c</field>
                <operation>equals</operation>
                <valueField>$Source.Facility_Client__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Acm_Facility__c</referenceTo>
        <relationshipLabel>Collateral</relationshipLabel>
        <relationshipName>Collateral</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Status_Date__c</fullName>
        <label>Active Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Aircraft_Model_No__c</fullName>
        <label>Aircraft Model No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aircraft_Registration_Mark__c</fullName>
        <label>Aircraft Registration Mark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aircraft_Serial_No__c</fullName>
        <label>Aircraft Serial No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Description__c</fullName>
        <label>Asset Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <label>Asset Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <label>Asset</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Beneficiary_Name__c</fullName>
        <label>Source Beneficiary Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beneficiary__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>set beneficiary</description>
        <inlineHelpText>set beneficiary</inlineHelpText>
        <label>Beneficiary/Borrower</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Collateral (Account)</relationshipLabel>
        <relationshipName>Collateral1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bond_Number__c</fullName>
        <label>Bond Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ceded_Rights__c</fullName>
        <label>Ceded Rights</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cession_Type__c</fullName>
        <label>Source Cession Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_Allocation_Date__c</fullName>
        <label>Source Collateral Allocation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Collateral_Condition__c</fullName>
        <label>Source Collateral Condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Collateral_Group__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Collateral Group</label>
        <referenceTo>Collateral_Group__c</referenceTo>
        <relationshipLabel>Collateral</relationshipLabel>
        <relationshipName>Collateral</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collateral_Inspection_Date__c</fullName>
        <label>Source Collateral Inspection Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Collateral_No__c</fullName>
        <displayFormat>C-{000000}</displayFormat>
        <label>Collateral No</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Collateral_Of__c</fullName>
        <label>Source Collateral Of</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_Priority__c</fullName>
        <label>Source Collateral Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Collateral_Sort_No__c</fullName>
        <label>Source Collateral Sort No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Collateral_Type1__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Collateral Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Collateral_Type__c.Collateral_Group__c</field>
                <operation>equals</operation>
                <valueField>$Source.Collateral_Group__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Collateral_Type__c</referenceTo>
        <relationshipLabel>Collateral</relationshipLabel>
        <relationshipName>Collateral</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collateral_Type_Script_Memo_No__c</fullName>
        <label>Source Collateral Type Script Memo No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Collateral_Type__c</fullName>
        <label>Collateral Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call Option</fullName>
                </value>
                <value>
                    <fullName>Cession</fullName>
                </value>
                <value>
                    <fullName>Debenture</fullName>
                </value>
                <value>
                    <fullName>Deposit</fullName>
                </value>
                <value>
                    <fullName>Guarantee</fullName>
                </value>
                <value>
                    <fullName>Guarantee &amp; Cession</fullName>
                </value>
                <value>
                    <fullName>Letter of Undertaking</fullName>
                </value>
                <value>
                    <fullName>Mortgage Bond</fullName>
                </value>
                <value>
                    <fullName>Negative Pledge</fullName>
                </value>
                <value>
                    <fullName>Notarial Bond</fullName>
                </value>
                <value>
                    <fullName>Performance Gtee</fullName>
                </value>
                <value>
                    <fullName>Pledge &amp; Cession</fullName>
                </value>
                <value>
                    <fullName>Promissory Notes</fullName>
                </value>
                <value>
                    <fullName>Put Option</fullName>
                </value>
                <value>
                    <fullName>Reversionary Cession</fullName>
                </value>
                <value>
                    <fullName>Suretyship</fullName>
                </value>
                <value>
                    <fullName>Undertaking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Client_Name__c</fullName>
        <label>Source Contract Client Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Collateral Country</description>
        <inlineHelpText>Collateral Country</inlineHelpText>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <formula>TEXT(CurrencyIsoCode )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Outstanding_Date__c</fullName>
        <formula>IF(ISPICKVAL( Status__c , &quot;Outstanding&quot;), TODAY() -  DATEVALUE(CreatedDate), 
IF(ISPICKVAL( Status__c , &quot;Active&quot;), TODAY() -  (Active_Status_Date__c ) ,
IF(ISPICKVAL( Status__c , &quot;Released&quot;),TODAY() - (Released_Status_Date__c ),NULL
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Outstanding Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Status__c</fullName>
        <formula>TODAY() - DATEVALUE( Status_Change_Stamp__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Document_Description__c</fullName>
        <label>Document Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Document_Expiry_Date__c</fullName>
        <label>Document Expiry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Document_Name__c</fullName>
        <label>Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Status__c</fullName>
        <label>Document Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Document verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <inlineHelpText>Specifies the Collateral Expiry date</inlineHelpText>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facility_Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facillity Beneficiary</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Collateral (Account)</relationshipLabel>
        <relationshipName>Collateral_Facility_Client</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Foreign_Domicile__c</fullName>
        <label>Source Foreign Domicile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foreign_or_Local__c</fullName>
        <label>Foreign or Local</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Underlying_Assets__c</fullName>
        <label>Has Underlying Asset(s)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>In_Mentis_Feed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Source In Mentis Feed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_favour_of__c</fullName>
        <label>Source In favour of</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issuer_Name__c</fullName>
        <label>Source Issuer Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Listed_Shares__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Listed Shares</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Collaterals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outstanding_Status_Date__c</fullName>
        <label>Outstanding Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outstanding_Status_Difference__c</fullName>
        <formula>Active_Status_Date__c- DATEVALUE (CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding Status Difference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physical_Location__c</fullName>
        <description>Physical Location where collateral is stored.</description>
        <inlineHelpText>Physical Location where collateral is stored.</inlineHelpText>
        <label>Physical Location of Documentation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Client_Name__c</fullName>
        <label>Source Project Client Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Code__c</fullName>
        <label>Source Project Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Tag__c</fullName>
        <label>Source Project Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Description__c</fullName>
        <label>Property Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Provider_Name__c</fullName>
        <label>Source Provider Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>Rank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Tag__c</fullName>
        <label>Relationship Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Released_Status_Date__c</fullName>
        <label>Released Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Released_Status_Difference__c</fullName>
        <formula>Released_Status_Date__c -( Active_Status_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Released Status Difference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remediation_Reason__c</fullName>
        <label>Source Remediation Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Remediation_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Source Remediation Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMSQ_No__c</fullName>
        <label>Source SMSQ No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saved_To_Acm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Variable used to indicate whether collateral was saved to ACM</description>
        <inlineHelpText>check box used to indicate whether collateral was saved to ACM</inlineHelpText>
        <label>Saved To Acm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Beneficiary</fullName>
                    <label>Beneficiary/Borrower</label>
                </value>
                <value>
                    <fullName>Facility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signature_Date__c</fullName>
        <inlineHelpText>Signature date of the Collateral</inlineHelpText>
        <label>Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Source_Contract_Id__c</fullName>
        <label>Source Contract Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Security_Id__c</fullName>
        <label>Source Security Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Security_Type_Id__c</fullName>
        <label>Source Security Type Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Staff_Responsible__c</fullName>
        <label>Source Staff Responsible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Change_Stamp__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Status Change Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Outstanding</fullName>
                    <default>true</default>
                    <label>Outstanding</label>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supporting_Documentation_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supporting Documentation Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title_Deed_No__c</fullName>
        <label>Title Deed No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valuation_Amount__c</fullName>
        <label>Valuation Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valuation_Date__c</fullName>
        <label>Valuation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Value_Limit__c</fullName>
        <label>Value Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value_Type__c</fullName>
        <label>Value Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Limited</fullName>
                </value>
                <value>
                    <fullName>Unlimited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <inlineHelpText>Collateral Value</inlineHelpText>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Collateral</label>
    <listViews>
        <fullName>All_Collateral</fullName>
        <columns>NAME</columns>
        <columns>Collateral_Group__c</columns>
        <columns>Collateral_Type__c</columns>
        <columns>Account__c</columns>
        <columns>Beneficiary__c</columns>
        <columns>Facility_Client__c</columns>
        <columns>Status__c</columns>
        <columns>Value__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <label>All Collateral</label>
    </listViews>
    <nameField>
        <label>Collateral Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collateral</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Asset_Description</fullName>
        <active>true</active>
        <description>If a Collateral Item has any underlying assets the user must put in a description of that/those assets</description>
        <errorConditionFormula>AND(
    ISPICKVAL(Has_Underlying_Assets__c, &quot;True&quot;),
  ISBLANK( Asset_Description__c )
)</errorConditionFormula>
        <errorDisplayField>Asset_Description__c</errorDisplayField>
        <errorMessage>Please ensure that you specify the description of the Asset when asset is set to &quot;True&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Supporting_Documentation_Active_Status</fullName>
        <active>true</active>
        <description>Prompts agent to confirm whether support documentation has been uploaded when the status is changed to Active.</description>
        <errorConditionFormula>IF(AND(TEXT(Status__c) = &quot;Active&quot; ,AND((ISBLANK(Comments__c )),  Supporting_Documentation_Uploaded__c =True)),True, False)</errorConditionFormula>
        <errorDisplayField>Comments__c</errorDisplayField>
        <errorMessage>Please enter the remark detail for the collateral item</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Documents_Are_Verified</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
   OR
   (
      ISPICKVAL(Status__c, &quot;Active&quot;),
      ISPICKVAL(Status__c , &quot;Released&quot;) 
   ), 
   NOT(Supporting_Documentation_Uploaded__c)
 )</errorConditionFormula>
        <errorDisplayField>Supporting_Documentation_Uploaded__c</errorDisplayField>
        <errorMessage>Please upload the relevant documentation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Value_Field_validation</fullName>
        <active>true</active>
        <description>Validates that a custom field called  Value contains a value if a Value type has a type of “Limited.”</description>
        <errorConditionFormula>AND(
  ISPICKVAL( Value_Type__c , &quot;Limited&quot;) ,
 ISNULL( Value__c )
)</errorConditionFormula>
        <errorDisplayField>Value__c</errorDisplayField>
        <errorMessage>Ensure that the Value is specified when the type is set to Limited.</errorMessage>
    </validationRules>
</CustomObject>